--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,11 @@ on:
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [windows-2019, windows-2022]
+        vcpkg_ref: [2023.08.09, 2024.01.12, 2024.02.14]
     steps:
       - uses: actions/checkout@v2
       - uses: johnwason/vcpkg-action@v6
@@ -16,6 +20,8 @@ jobs:
           github-binarycache: true
           triplet: x64-windows-release
           token: ${{ github.token }}
+          revision: ${{ matrix.vcpkg_ref }}
+          cache-key: ci-${{ matrix.os }}-${{ matrix.vcpkg_ref }}
       - name: configure
         run: |
           cmake -B build -S .
