--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,5 +29,6 @@ jobs:
         run: |
           cmake --build build --config Release
       - name: test
+        working-directory: build
         run: |
           ctest -C Release --verbose
